--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,27 @@
 .env
 /alembic/README
 /alembic/script.py.mako
+
+.config.yaml
+# macOS specific
+.DS_Store
+
+# Python cache
+__pycache__/
+*.pyc
+*.pyo
+
+# Virtual environment
+venv/
+
+# Environment files
+*.env
+.env
+
+# Logs
+*.log
+
+# Other temporary files
+*.swp
+*.swoconfig.yaml
+config.yaml
