--- a/data/config.json
+++ b/data/config.json
@@ -3,422 +3,33 @@
     {
       "id": "1",
       "name": "Комару - кукуруза",
-      "photo": "https://tinypic.host/images/2024/07/04/photo_2024-07-04_01-04-14-transformed.jpeg",
+      "photo": "https://tinypic.host/",
       "points": "1000",
-      "rarity": "Редкая"
+      "rarity": "Редкая" ,
+      "description": "Описание"
     },
     {
       "id": "2",
       "name": "Сладкая комару",
-      "photo": "https://tinypic.host/images/2024/07/04/imagec621aac736ab9b1e.png",
-      "points": "1000",
-      "rarity": "Редкая"
+      "photo": "https://tinypic.host/",
+      "points": "3000",
+      "rarity": "Сверхредкая",
+			"description": "Описание"
     },
     {
       "id": "3",
       "name": "Комару сидящая на коле",
-      "photo": "https://tinypic.host/images/2024/07/03/imagec5fd8e0c36682b40.png",
-      "points": "1000",
-      "rarity": "Редкая"
+      "photo": "https://tinypic.host/",
+      "points": "5000",
+      "rarity": "Мифическая",
+			"description": "Описание"
     },
     {
       "id": "4",
       "name": "Комару с уткой на голове",
-      "photo": "https://tinypic.host/images/2024/06/13/komaru_rare_4.jpg",
-      "points": "1000",
-      "rarity": "Редкая"
-    },
-    {
-      "id": "5",
-      "name": "Комару устав",
-      "photo": "https://tinypic.host/images/2024/06/14/komaru_rare_5.jpg",
-      "points": "1000",
-      "rarity": "Редкая"
-    },
-    {
-      "id": "6",
-      "name": "Комару с бантиком",
-      "photo": "https://tinypic.host/images/2024/06/14/image.png",
-      "points": "1000",
-      "rarity": "Редкая"
-    },
-    {
-      "id": "7",
-      "name": "Комару на лестнице",
-      "photo": "https://tinypic.host/images/2024/06/14/imageb6a888b62d061c04.png",
-      "points": "1000",
-      "rarity": "Редкая"
-    },
-    {
-      "id": "8",
-      "name": "Комару вампирша",
-      "photo": "https://tinypic.host/images/2024/06/24/image59ed061d43e35b08.png",
-      "points": "1000",
-      "rarity": "Редкая"
-    },
-    {
-      "id": "9",
-      "name": "Комару в домике",
-      "photo": "https://tinypic.host/images/2024/06/24/image10062a1b8095f635.png",
-      "points": "1000",
-      "rarity": "Редкая"
-    },
-    {
-      "id": "10",
-      "name": "Испуганная Камара",
-      "photo": "https://tinypic.host/images/2024/06/29/image78043b5dc2dfcf6c.png",
-      "points": "1000",
-      "rarity": "Редкая"
-    },
-    {
-      "id": "11",
-      "name": "Комару мяукает",
-      "photo": "https://tinypic.host/images/2024/07/04/image68d8c718ce864b63.png",
-      "points": "1000",
-      "rarity": "Редкая"
-    },
-    {
-      "id": "12",
-      "name": "Просто Камара",
-      "photo": "https://tinypic.host/images/2024/07/01/imagef796ea6c3c5da831.png",
-      "points": "1000",
-      "rarity": "Редкая"
-    },
-    {
-      "id": "13",
-      "name": "Тигрица комару",
-      "photo": "https://tinypic.host/images/2024/07/04/imagedcd24b186d7b8030.png",
-      "points": "1000",
-      "rarity": "Редкая"
-    },
-    {
-      "id": "14",
-      "name": "Комару с мишкой",
-      "photo": "https://tinypic.host/images/2024/07/19/imagebe9e1b5547e017ff.png",
-      "points": "1000",
-      "rarity": "Редкая"
-    },
-    {
-      "id": "15",
-      "name": "Санта Комару",
-      "photo": "https://tinypic.host/images/2024/07/19/imagef70d87085627ac10.png",
-      "points": "1000",
-      "rarity": "Редкая"
-    },
-    {
-      "id": "16",
-      "name": "Комару Subway Surfers",
-      "photo": "https://tinypic.host/images/2024/06/13/download.jpg",
-      "points": "3000",
-      "rarity": "Сверхредкая"
-    },
-    {
-      "id": "17",
-      "name": "Комару в лесу",
-      "photo": "https://tinypic.host/images/2024/06/13/download2cfc6af40f36a502.jpg",
-      "points": "3000",
-      "rarity": "Сверхредкая"
-    },
-    {
-      "id": "18",
-      "name": "Комару арбузный барон",
-      "photo": "https://tinypic.host/images/2024/06/13/downloadf586e1f769c900f3.jpg",
-      "points": "3000",
-      "rarity": "Сверхредкая"
-    },
-    {
-      "id": "19",
-      "name": "Много комару",
-      "photo": "https://tinypic.host/images/2024/06/13/image8d8df33f3f9da4d0.png",
-      "points": "3000",
-      "rarity": "Сверхредкая"
-    },
-    {
-      "id": "20",
-      "name": "Комару с мандаринчиками",
-      "photo": "https://tinypic.host/images/2024/06/13/imagec543adc577eac998.png",
-      "points": "3000",
-      "rarity": "Сверхредкая"
-    },
-    {
-      "id": "21",
-      "name": "Комару в лавандовом поле",
-      "photo": "https://tinypic.host/images/2024/06/14/image4beca245cfc6a9ed.png",
-      "points": "3000",
-      "rarity": "Сверхредкая"
-    },
-    {
-      "id": "22",
-      "name": "Комару в техасе",
-      "photo": "https://tinypic.host/images/2024/07/03/image10ab0fe86df499e0.png",
-      "points": "3000",
-      "rarity": "Сверхредкая"
-    },
-    {
-      "id": "23",
-      "name": "Комару в лодке",
-      "photo": "https://tinypic.host/images/2024/06/24/photo_2024-06-24_21-24-07-transformed.jpeg",
-      "points": "3000",
-      "rarity": "Сверхредкая"
-    },
-    {
-      "id": "24",
-      "name": "Комару в отдыхает на снежке",
-      "photo": "https://tinypic.host/images/2024/06/24/photo_2024-06-24_21-25-22-transformed.jpeg",
-      "points": "3000",
-      "rarity": "Сверхредкая"
-    },
-    {
-      "id": "25",
-      "name": "Комару в лесу",
-      "photo": "https://tinypic.host/images/2024/06/29/1000071525.jpg",
-      "points": "3000",
-      "rarity": "Сверхредкая"
-    },
-    {
-      "id": "26",
-      "name": "Комару отдыхает у себя дома",
-      "photo": "https://tinypic.host/images/2024/06/29/image9c4c47f9f9415f6c.png",
-      "points": "3000",
-      "rarity": "Сверхредкая"
-    },
-    {
-      "id": "27",
-      "name": "Комару из матрицы",
-      "photo": "https://tinypic.host/images/2024/07/01/image6013d6574a2325c2.png",
-      "points": "3000",
-      "rarity": "Сверхредкая"
-    },
-    {
-      "id": "28",
-      "name": "Комару в подворотне",
-      "photo": "https://tinypic.host/images/2024/07/04/b5532cfb-96fa-4b75-ac17-3971d366afcf.png",
-      "points": "3000",
-      "rarity": "Сверхредкая"
-    },
-    {
-      "id": "29",
-      "name": "Комару лежит в поезде",
-      "photo": "https://tinypic.host/images/2024/07/19/imagedb4897a7180ce7a2.png",
-      "points": "3000",
-      "rarity": "Сверхредкая"
-    },
-    {
-      "id": "30",
-      "name": "Комару у вентилятора",
-      "photo": "https://tinypic.host/images/2024/07/19/image7969245347befac2.png",
-      "points": "3000",
-      "rarity": "Сверхредкая"
-    },
-    {
-      "id": "31",
-      "name": "Комару зимой",
-      "photo": "https://tinypic.host/images/2024/06/13/komaru_mific_1.jpg",
-      "points": "5000",
-      "rarity": "Мифическая"
-    },
-    {
-      "id": "32",
-      "name": "Комару у портала в ад",
-      "photo": "https://tinypic.host/images/2024/06/13/komaru_mific_2.jpg",
-      "points": "5000",
-      "rarity": "Мифическая"
-    },
-    {
-      "id": "33",
-      "name": "Комару на рыбалке",
-      "photo": "https://tinypic.host/images/2024/07/04/image.png",
-      "points": "5000",
-      "rarity": "Мифическая"
-    },
-    {
-      "id": "34",
-      "name": "Комару в backrooms",
-      "photo": "https://tinypic.host/images/2024/06/13/komaru_mific_4.jpg",
-      "points": "5000",
-      "rarity": "Мифическая"
-    },
-    {
-      "id": "35",
-      "name": "Комару джедай",
-      "photo": "https://tinypic.host/images/2024/06/13/komaru_mific_5.jpg",
-      "points": "5000",
-      "rarity": "Мифическая"
-    },
-    {
-      "id": "36",
-      "name": "Комару в окопе",
-      "photo": "https://tinypic.host/images/2024/06/14/image29ca51d48867c334.png",
-      "points": "5000",
-      "rarity": "Мифическая"
-    },
-    {
-      "id": "37",
-      "name": "Удивленная Комару",
-      "photo": "https://tinypic.host/images/2024/06/14/image9667ad3287997d1c.png",
-      "points": "5000",
-      "rarity": "Мифическая"
-    },
-    {
-      "id": "38",
-      "name": "Заключенная Комару",
-      "photo": "https://tinypic.host/images/2024/06/24/imaged41b443951a2e6f9.png",
-      "points": "5000",
-      "rarity": "Мифическая"
-    },
-    {
-      "id": "39",
-      "name": "Боевая Комару",
-      "photo": "https://tinypic.host/images/2024/06/24/image00208043b01e3bbb.png",
-      "points": "5000",
-      "rarity": "Мифическая"
-    },
-    {
-      "id": "40",
-      "name": "Комару в разрушенном городе",
-      "photo": "https://tinypic.host/images/2024/06/29/1000071523.jpg",
-      "points": "5000",
-      "rarity": "Мифическая"
-    },
-    {
-      "id": "41",
-      "name": "Комару назад в будущее",
-      "photo": "https://tinypic.host/images/2024/06/29/1000071522.jpg",
-      "points": "5000",
-      "rarity": "Мифическая"
-    },
-    {
-      "id": "42",
-      "name": "Комару на пляже",
-      "photo": "https://tinypic.host/images/2024/07/01/image7e035ff0b65db088.png",
-      "points": "5000",
-      "rarity": "Мифическая"
-    },
-    {
-      "id": "43",
-      "name": "Комару детектив",
-      "photo": "https://tinypic.host/images/2024/07/04/image23bdb9242ba3787e.png",
-      "points": "5000",
-      "rarity": "Мифическая"
-    },
-    {
-      "id": "44",
-      "name": "Комару леди",
-      "photo": "https://tinypic.host/images/2024/07/19/imagee92cd3c4e9f78c11.png",
-      "points": "5000",
-      "rarity": "Мифическая"
-    },
-    {
-      "id": "45",
-      "name": "Комару в деревне",
-      "photo": "https://tinypic.host/images/2024/07/19/image65036c25e372dfdd.png",
-      "points": "5000",
-      "rarity": "Мифическая"
-    },
-    {
-      "id": "46",
-      "name": "Киберпанк Комару",
-      "photo": "https://tinypic.host/images/2024/06/13/komaru_lega_1.jpg",
+      "photo": "https://tinypic.host/",
       "points": "10000",
       "rarity": "Легендарная"
-    },
-    {
-      "id": "47",
-      "name": "Комару в пост-апокалипсисе",
-      "photo": "https://tinypic.host/images/2024/06/13/komaru_lega_2.jpg",
-      "points": "10000",
-      "rarity": "Легендарная"
-    },
-    {
-      "id": "48",
-      "name": "Комару чушпанчик",
-      "photo": "https://tinypic.host/images/2024/06/13/komaru_lega_3.jpg",
-      "points": "10000",
-      "rarity": "Легендарная"
-    },
-    {
-      "id": "49",
-      "name": "Комару диктатор",
-      "photo": "https://tinypic.host/images/2024/06/13/komaru_lega_4.jpg",
-      "points": "10000",
-      "rarity": "Легендарная"
-    },
-    {
-      "id": "50",
-      "name": "Комару королева",
-      "photo": "https://tinypic.host/images/2024/06/13/komaru_lega_5.jpg",
-      "points": "10000",
-      "rarity": "Легендарная"
-    },
-    {
-      "id": "51",
-      "name": "Комару самурай",
-      "photo": "https://tinypic.host/images/2024/06/13/komaru_lega_6.jpg",
-      "points": "10000",
-      "rarity": "Легендарная"
-    },
-    {
-      "id": "52",
-      "name": "Комару в школе",
-      "photo": "https://tinypic.host/images/2024/06/14/image617cfe390e55eb31.png",
-      "points": "10000",
-      "rarity": "Легендарная"
-    },
-    {
-      "id": "53",
-      "name": "Комару на работе",
-      "photo": "https://tinypic.host/images/2024/06/24/imagebc4929a56fd33c5f.png",
-      "points": "10000",
-      "rarity": "Легендарная"
-    },
-    {
-      "id": "54",
-      "name": "Комару баскетболистка",
-      "photo": "https://tinypic.host/images/2024/06/24/image2c79b7f5f1c08d35.png",
-      "points": "10000",
-      "rarity": "Легендарная"
-    },
-    {
-      "id": "55",
-      "name": "Комару в игре",
-      "photo": "https://tinypic.host/images/2024/06/29/1000071514.jpg",
-      "points": "10000",
-      "rarity": "Легендарная"
-    },
-    {
-      "id": "56",
-      "name": "Комару в поезде",
-      "photo": "https://tinypic.host/images/2024/06/29/1000071526.jpg",
-      "points": "10000",
-      "rarity": "Легендарная"
-    },
-    {
-      "id": "57",
-      "name": "Комару в библиотеке",
-      "photo": "https://tinypic.host/images/2024/07/01/photo_2024-07-01_23-44-35-transformed.jpeg",
-      "points": "10000",
-      "rarity": "Легендарная"
-    },
-    {
-      "id": "58",
-      "name": "Комару пиратка",
-      "photo": "https://tinypic.host/images/2024/07/04/image6ddb5d357bbbe311.png",
-      "points": "10000",
-      "rarity": "Легендарная"
-    },
-    {
-      "id": "59",
-      "name": "Комару среди хаоса",
-      "photo": "https://tinypic.host/images/2024/07/19/image99c65c0ad4476b1f.png",
-      "points": "10000",
-      "rarity": "Легендарная"
-    },
-    {
-      "id": "60",
-      "name": "Комару на лугу",
-      "photo": "https://tinypic.host/images/2024/07/19/image0759a4eaf695f95e.png",
-      "points": "10000",
-      "rarity": "Легендарная"
-    }
+      }
   ]
 }
