add description to example card with id 4

--- a/data/config.json
+++ b/data/config.json
@@ -29,7 +29,8 @@
       "name": "Карта4",
       "photo": "https://tinypic.host/",
       "points": "10000",
-      "rarity": "Легендарная"
+      "rarity": "Легендарная",
+			"description": "Описание"
       }
   ]
 }
